--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@ https://templatemo.com/tm-556-catalog-z
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
-                    <span><a href="software/Flexural.zip">software</a></span>
-                    <span><a href="pdf/Flexural.pdf">manual</a></span>
+                    <span><a href="software/Bending.zip">software</a></span>
+                    <span><a href="pdf/Bending.pdf">manual</a></span>
                 </div>
 				<div class="d-flex justify-content-between tm-text-gray">
                     <span><a href="pdf/jack-astm.pdf">ASTM</a></span>
