--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ https://templatemo.com/tm-556-catalog-z
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/cold-bending.png" alt="Image" class="img-fluid">
+                    <img src="img/Cold-bending.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>cold-bending</h2>
           
