--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ https://templatemo.com/tm-556-catalog-z
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/Cold-bending.png" alt="Image" class="img-fluid">
+                    <img src="img/cold-bending.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>cold-bending</h2>
           
@@ -200,7 +200,7 @@ https://templatemo.com/tm-556-catalog-z
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     <span><a href=" "> </a></span>
-                    <span><a href="pdf/cold-bending.pdf">manual</a></span>
+                    <span><a href="pdf/Cold-bending.pdf">manual</a></span>
                 </div>
 				<div class="d-flex justify-content-between tm-text-gray">
                     <span><a href="pdf/jack-astm.pdf">ASTM</a></span>
