--- a/index.html
+++ b/index.html
@@ -273,7 +273,75 @@ https://templatemo.com/tm-556-catalog-z
                     <span><a href="pdf/jack-iso.pdf">ISO</a></span>
                 </div>
             </div>
-
+            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
+                <figure class="effect-ming tm-video-item">
+                    <img src="img/CBR.png" alt="Image" class="img-fluid">
+                    <figcaption class="d-flex align-items-center justify-content-center">
+                        <h2>CBR</h2>
+                    </figcaption>                    
+                </figure>
+                <div class="d-flex justify-content-between tm-text-gray">
+                    <span><a href="software/CBR.zip">software</a></span>
+                    <span><a href="pdf/CBR.pdf">manual</a></span>
+                </div>
+				<div class="d-flex justify-content-between tm-text-gray">
+                    <span><a href="pdf/jack-astm.pdf">ASTM</a></span>
+                    <span><a href="pdf/jack-iso.pdf">ISO</a></span>
+                </div>
+            </div>
+		
+		            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
+                <figure class="effect-ming tm-video-item">
+                    <img src="img/Marshall.png" alt="Image" class="img-fluid">
+                    <figcaption class="d-flex align-items-center justify-content-center">
+                        <h2>Marshall</h2>
+                    </figcaption>                    
+                </figure>
+                <div class="d-flex justify-content-between tm-text-gray">
+                    <span><a href="software/Marshall.zip">software</a></span>
+                    <span><a href="pdf/Marshall.pdf">manual</a></span>
+                </div>
+				<div class="d-flex justify-content-between tm-text-gray">
+                    <span><a href="pdf/jack-astm.pdf">ASTM</a></span>
+                    <span><a href="pdf/jack-iso.pdf">ISO</a></span>
+                </div>
+            </div>
+		
+		            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
+                <figure class="effect-ming tm-video-item">
+                    <img src="img/Triaxial.png" alt="Image" class="img-fluid">
+                    <figcaption class="d-flex align-items-center justify-content-center">
+                        <h2>Triaxial</h2>
+                    </figcaption>                    
+                </figure>
+                <div class="d-flex justify-content-between tm-text-gray">
+                    <span><a href="software/Triaxial.zip">software</a></span>
+                    <span><a href="pdf/Triaxial.pdf">manual</a></span>
+                </div>
+				<div class="d-flex justify-content-between tm-text-gray">
+                    <span><a href="pdf/jack-astm.pdf">ASTM</a></span>
+                    <span><a href="pdf/jack-iso.pdf">ISO</a></span>
+                </div>
+            </div>
+		
+	<div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
+                <figure class="effect-ming tm-video-item">
+                    <img src="img/Uniaxial.png" alt="Image" class="img-fluid">
+                    <figcaption class="d-flex align-items-center justify-content-center">
+                        <h2>Uniaxial</h2>
+                    </figcaption>                    
+                </figure>
+                <div class="d-flex justify-content-between tm-text-gray">
+                    <span><a href="software/Uniaxial.zip">software</a></span>
+                    <span><a href="pdf/Uniaxial.pdf">manual</a></span>
+                </div>
+				<div class="d-flex justify-content-between tm-text-gray">
+                    <span><a href="pdf/jack-astm.pdf">ASTM</a></span>
+                    <span><a href="pdf/jack-iso.pdf">ISO</a></span>
+                </div>
+            </div>
+		
+		
     </div> <!-- container-fluid, tm-container-content -->
 
     <footer class="tm-bg-gray pt-5 pb-3 tm-text-gray tm-footer">
