--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@ https://templatemo.com/tm-556-catalog-z
                     <span><a href="pdf/RCPT.pdf">manual</a></span>
                 </div>
 				<div class="d-flex justify-content-between tm-text-gray">
-                    <span><a href="pdf/jack-astm.pdf">ASTM</a></span>
-                    <span><a href="pdf/jack-iso.pdf">ISO</a></span>
+                    <span><a href="pdf/ASTM C1202 INSO 20793.pdf">ASTM C1202 INSO 20793</a></span>
+                    <span><a href="pdf/ASTM C1760 INSO 15428.pdf">ASTM C1760 INSO 15428</a></span>
                 </div>
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
