--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ https://templatemo.com/tm-556-catalog-z
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     <span><a href="software/utm.zip">software</a></span>
-                    <span><a href="pdf/utm.pdf">manual</a></span>
+                    <span><a href="pdf/UTM.pdf">manual</a></span>
                 </div>
 				<div class="d-flex justify-content-between tm-text-gray">
                     <span><a href="pdf/jack-astm.pdf">ASTM</a></span>
