--- a/index.html
+++ b/index.html
@@ -226,15 +226,15 @@ https://templatemo.com/tm-556-catalog-z
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/direc-shear.png" alt="Image" class="img-fluid">
+                    <img src="img/direct-shear.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>direc shear</h2>
+                        <h2>direct shear</h2>
              
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
-                    <span><a href="software/direc-shear.zip">software</a></span>
-                    <span><a href="pdf/direc-shear.pdf">manual</a></span>
+                    <span><a href="software/direct-shear.zip">software</a></span>
+                    <span><a href="pdf/direct-shear.pdf">manual</a></span>
                 </div>
 				<div class="d-flex justify-content-between tm-text-gray">
                     <span><a href="pdf/jack-astm.pdf">ASTM</a></span>
